syntax = "proto3";

//#options
option java_multiple_files = true;
option java_package = "services.scalable.datalog.grpc";
option java_outer_classname = "ClientServiceProto";

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";

package services.scalable.datalog.grpc;

option (scalapb.options) = {
  single_file: true
  flat_package: true
  preserve_unknown_fields: false
};

message Datom {
  optional string a = 1;
  optional bytes v = 2;
  optional string e = 3;
  optional int64 t = 4;
  optional bool op = 5;
}

message IndexMeta {
  string root = 1;
}

message DBMeta {
  string name = 1;
  int32 numLeafEntries = 2;
  int32 numMetaEntries = 3;
  optional IndexMeta eavtRoot = 4;
  optional IndexMeta aevtRoot = 5;
  optional IndexMeta avetRoot = 6;
  optional IndexMeta vaetRoot = 7;
}

message FileDB {
  repeated Datom datoms = 1;
}